apollo-federation/src/connectors/expand/tests/snapshots/connectors@entity_query_field_v04.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/entity_query_field_v04.graphql
---
{
    "connectors_Query_tractor_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "v1",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.tractor),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://127.0.0.1",
                                    location: 0..16,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/tractors?id=",
                                location: 0..13,
                            },
                        ),
                        Expression(
                            Expression {
                                expression: JSONSelection {
                                    inner: Value(
                                        WithRange {
                                            node: Path(
                                                PathSelection {
                                                    path: WithRange {
                                                        node: Var(
                                                            WithRange {
                                                                node: $args,
                                                                range: Some(
                                                                    0..5,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "id",
                                                                        ),
                                                                        range: Some(
                                                                            6..8,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            8..8,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    5..8,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            0..8,
                                                        ),
                                                    },
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    ),
                                    spec: V0_4,
                                },
                                location: 14..22,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "id",
                                                    ),
                                                    range: Some(
                                                        0..2,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        2..2,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..2,
                                ),
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "name",
                                                    ),
                                                    range: Some(
                                                        3..7,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        7..7,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                3..7,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    3..7,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..7,
                    ),
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_4,
        schema_subtypes_map: {
            "_Entity": {
                "Tractor",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $args: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        output_type: Some(
            Named(
                "Tractor",
            ),
        ),
        label: Label(
            "connectors.v1 http: GET /tractors?id={$args.id}",
        ),
    },
    "connectors_Tractor_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "v1",
            ),
            named: None,
            directive: Type(
                ObjectTypeDefinitionDirectivePosition {
                    type_name: "Tractor",
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
        },
        transport: Some(
            HttpJsonTransport {
                source_template: Some(
                    StringTemplate {
                        parts: [
                            Constant(
                                Constant {
                                    value: "http://127.0.0.1",
                                    location: 0..16,
                                },
                            ),
                        ],
                    },
                ),
                connect_template: StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "/tractors/",
                                location: 0..10,
                            },
                        ),
                        Expression(
                            Expression {
                                expression: JSONSelection {
                                    inner: Value(
                                        WithRange {
                                            node: Path(
                                                PathSelection {
                                                    path: WithRange {
                                                        node: Var(
                                                            WithRange {
                                                                node: $this,
                                                                range: Some(
                                                                    0..5,
                                                                ),
                                                            },
                                                            WithRange {
                                                                node: Key(
                                                                    WithRange {
                                                                        node: Field(
                                                                            "id",
                                                                        ),
                                                                        range: Some(
                                                                            6..8,
                                                                        ),
                                                                    },
                                                                    WithRange {
                                                                        node: Empty,
                                                                        range: Some(
                                                                            8..8,
                                                                        ),
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    5..8,
                                                                ),
                                                            },
                                                        ),
                                                        range: Some(
                                                            0..8,
                                                        ),
                                                    },
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    ),
                                    spec: V0_4,
                                },
                                location: 11..19,
                            },
                        ),
                    ],
                },
                method: Get,
                headers: [],
                body: None,
                source_path: None,
                source_query_params: None,
                connect_path: None,
                connect_query_params: None,
            },
        ),
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "id",
                                                    ),
                                                    range: Some(
                                                        0..2,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        2..2,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    0..2,
                                ),
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: WithRange {
                                node: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Key(
                                                WithRange {
                                                    node: Field(
                                                        "name",
                                                    ),
                                                    range: Some(
                                                        3..7,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Empty,
                                                    range: Some(
                                                        7..7,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                3..7,
                                            ),
                                        },
                                    },
                                ),
                                range: Some(
                                    3..7,
                                ),
                            },
                        },
                    ],
                    range: Some(
                        0..7,
                    ),
                },
            ),
            spec: V0_4,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            TypeSingle,
        ),
        spec: V0_4,
        schema_subtypes_map: {
            "_Entity": {
                "Tractor",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $this: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        output_type: None,
        label: Label(
            "connectors.v1 http: GET /tractors/{$this.id}",
        ),
    },
}
