apollo-federation/src/connectors/expand/tests/snapshots/connectors@interface-object.graphql.snap
---
source: apollo-federation/src/connectors/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/connectors/expand/tests/schemas/expand/interface-object.graphql
---
{
    "connectors_Itf_e_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Itf.e),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
            base_type_name: "String",
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "http://localhost:4001",
                                location: 0..21,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/itfs/",
                            location: 0..6,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: JSONSelection {
                                inner: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Var(
                                                WithRange {
                                                    node: $this,
                                                    range: Some(
                                                        0..5,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Key(
                                                        WithRange {
                                                            node: Field(
                                                                "id",
                                                            ),
                                                            range: Some(
                                                                6..8,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Empty,
                                                            range: Some(
                                                                8..8,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        5..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    },
                                ),
                                spec: V0_1,
                            },
                            location: 7..15,
                        },
                    ),
                    Constant(
                        Constant {
                            value: "/e",
                            location: 16..18,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Path(
                PathSelection {
                    path: WithRange {
                        node: Var(
                            WithRange {
                                node: $,
                                range: Some(
                                    0..1,
                                ),
                            },
                            WithRange {
                                node: Empty,
                                range: Some(
                                    1..1,
                                ),
                            },
                        ),
                        range: Some(
                            0..1,
                        ),
                    },
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        schema_subtypes_map: {
            "_Entity": {
                "Itf",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $this: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "connectors.json http: GET /itfs/{$this.id}/e",
        ),
    },
    "connectors_Query_itfs_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.itfs),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
            base_type_name: "Itf",
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "http://localhost:4001",
                                location: 0..21,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/itfs",
                            location: 0..5,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                2..2,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        0..2,
                                    ),
                                },
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "c",
                                            ),
                                            range: Some(
                                                3..4,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                4..4,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        3..4,
                                    ),
                                },
                            },
                        },
                    ],
                    range: Some(
                        0..4,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        schema_subtypes_map: {
            "_Entity": {
                "Itf",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {},
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "connectors.json http: GET /itfs",
        ),
    },
    "connectors_Query_itf_0": Connector {
        id: ConnectId {
            subgraph_name: "connectors",
            source_name: Some(
                "json",
            ),
            named: None,
            directive: Field(
                ObjectOrInterfaceFieldDirectivePosition {
                    field: Object(Query.itf),
                    directive_name: "connect",
                    directive_index: 0,
                },
            ),
            base_type_name: "Itf",
        },
        transport: HttpJsonTransport {
            source_template: Some(
                StringTemplate {
                    parts: [
                        Constant(
                            Constant {
                                value: "http://localhost:4001",
                                location: 0..21,
                            },
                        ),
                    ],
                },
            ),
            connect_template: StringTemplate {
                parts: [
                    Constant(
                        Constant {
                            value: "/itfs/",
                            location: 0..6,
                        },
                    ),
                    Expression(
                        Expression {
                            expression: JSONSelection {
                                inner: Path(
                                    PathSelection {
                                        path: WithRange {
                                            node: Var(
                                                WithRange {
                                                    node: $args,
                                                    range: Some(
                                                        0..5,
                                                    ),
                                                },
                                                WithRange {
                                                    node: Key(
                                                        WithRange {
                                                            node: Field(
                                                                "id",
                                                            ),
                                                            range: Some(
                                                                6..8,
                                                            ),
                                                        },
                                                        WithRange {
                                                            node: Empty,
                                                            range: Some(
                                                                8..8,
                                                            ),
                                                        },
                                                    ),
                                                    range: Some(
                                                        5..8,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                0..8,
                                            ),
                                        },
                                    },
                                ),
                                spec: V0_1,
                            },
                            location: 7..15,
                        },
                    ),
                ],
            },
            method: Get,
            headers: [],
            body: None,
            source_path: None,
            source_query_params: None,
            connect_path: None,
            connect_query_params: None,
        },
        selection: JSONSelection {
            inner: Named(
                SubSelection {
                    selections: [
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "id",
                                            ),
                                            range: Some(
                                                0..2,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                2..2,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        0..2,
                                    ),
                                },
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "c",
                                            ),
                                            range: Some(
                                                3..4,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                4..4,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        3..4,
                                    ),
                                },
                            },
                        },
                        NamedSelection {
                            prefix: None,
                            path: PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "d",
                                            ),
                                            range: Some(
                                                5..6,
                                            ),
                                        },
                                        WithRange {
                                            node: Empty,
                                            range: Some(
                                                6..6,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        5..6,
                                    ),
                                },
                            },
                        },
                    ],
                    range: Some(
                        0..6,
                    ),
                },
            ),
            spec: V0_1,
        },
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        schema_subtypes_map: {
            "_Entity": {
                "Itf",
            },
        },
        request_headers: {},
        response_headers: {},
        request_variable_keys: {
            $args: {
                "id",
            },
        },
        response_variable_keys: {},
        batch_settings: None,
        error_settings: ConnectorErrorsSettings {
            message: None,
            source_extensions: None,
            connect_extensions: None,
            connect_is_success: None,
        },
        label: Label(
            "connectors.json http: GET /itfs/{$args.id}",
        ),
    },
}
